<resources>
    <string name="app_name">Memory Game</string>
    <string name="move0">Moves: 0</string>
    <string name="lost">You Lost!</string>
    <string name="select_6">Select 6 images to start playing</string>
    <string name="click_fetch">Click \'FETCH\' to download images</string>
    <string name="download_starting">Download starting...</string>
    <string name="invalid_url">"Invalid URL, please enter again"</string>
    <string name="cannot_access_url">Cannot access URL, please try again</string>
    <string name="cannot_retrieve_imgs">Insufficient images, please fetch again</string>
    <string name="start">Start</string>
    <string name="credits">Credits</string>
    <string name="fetchBtn">Fetch</string>
    <string name="description">Description</string>
    <string name="game_title">Memory Game</string>
    <string name="the_memory_game">The Memory Game</string>
    <string name="description_overview">Testing of your memory using pictures you have selected.</string>
    <string name="how_to_play">How To Play</string>
    <string name="description_body">1.Search for a category* of pictures e.g. \'nature\' or \'music\' or enter url to search.
        \n\n2.Select 6 pictures and your game will load.
        \n\n3.Turn over any two cards.
        \n\n4.If the cards match, you get a point. If they don\'t, they will turn back over.
        \n\n5.The game ends when all cards have been matched.
        \n\n*Searched term is retrieved from http://stocksnap.io/search.
    </string>
    <string name="credits_body_group">Team 10:
        \n\nChua Ya Zhen
        \n\nLim Yee Jean
        \n\nMa Zi Wang (Austin)
        \n\nNgu Myat Che Zaw
        \n\nTang Chor Kian
        \n\nYue Peng Cheng
    </string>
    <string name="music">Music By</string>
    <string name="credits_body_music">The Isolator by @nop © copyright 2021 Licensed under a Creative Commons Attribution Noncommercial (3.0) license.
        \n\nMore Country by Caffeine_Creek_Band from Pixabay
        \nSound effects from Free Sounds Library
    </string>
    <string name="leaderboard">Leaderboard</string>
</resources>