<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".viewCreditsActivity">
    <ImageView
        android:id="@+id/credits_icon"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:scaleType="centerCrop"
        android:src="@drawable/logo_transparent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/credits_title"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:gravity="center"
        android:text="@string/credits"
        android:textSize="32sp"
        app:layout_constraintLeft_toRightOf="@id/credits_icon"
        app:layout_constraintTop_toTopOf="parent"/>
    <Space
        android:id="@+id/cs1"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        app:layout_constraintTop_toBottomOf="@id/credits_icon"/>
    <TextView
        android:id="@+id/credits_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/credits_body_group"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toBottomOf="@id/cs1"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <Space
        android:id="@+id/cs2"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/credits_group"
        android:layout_height="20dp"/>
    <TextView
        android:id="@+id/music_by"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/music"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toTopOf="@id/credits_music"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/credits_music"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/credits_body_music"
        android:textSize="16sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="80dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>